Animation of poping out element fixed and overflow issue resolved

--- a/style.scss
+++ b/style.scss
@@ -20,8 +20,6 @@ body {
   position: relative;
   height: 100vh;
   background-color: #f6f6f7;
-  // background-image: linear-gradient(to bottom right ,$gradient-color-primary ,$gradient-color-secondary);
-  // background-repeat: no-repeat;
   font-size: 2rem;
   font-family: "Roboto Mono", monospace;
   color: rgb(0, 0, 0);
@@ -40,7 +38,8 @@ body {
   left: 50%;
   transform: translate(-50%, -50%);
   background-color: #fefefe;
-  //   border: 30px solid black;
+  
+  
 }
 .wrapper {
   height: 5.2rem;
@@ -49,11 +48,14 @@ body {
   justify-content: flex-start;
   align-items: center;
   padding-left: 0.8rem;
-  //   padding: 1.5rem 0;
-  overflow: hidden;
-  position: relative;
-  z-index:10;
-  // z-index: 1;
+  overflow:hidden;
+  
+  &:focus{
+    
+    outline: unset;
+  }
+  
+ 
   &__text-container {
     
     margin-left: 0.5rem;
@@ -66,17 +68,7 @@ body {
     }
   }
 
-  // &::after{
-  //     content:'';
-  //     display: block;
-  //     width: 100%;
-  //     height: 100%;
-  //     position: absolute;
-  //     top:0;
-  //     bottom:0;
-  //     left:12%;
-  //     background-color: rgba(133,220,222,1);
-  // }
+  
 }
 
 .cursor::before {
